# autoresearch

./: .gitignore  README.md  prepare.py  program.md  pyproject.toml  results.tsv  train.py
