[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous flood susceptibility research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.3.0",
    "pillow>=11.0.0",
    "rasterio>=1.4.0",
    "scikit-learn>=1.6.0",
]
